--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nashimul Hossain</title>
+    <title>Nashimul Hossain Web Devloper</title>
+    <link rel="<link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome To this</h1>
-    <h1>Nashimul World</h1>
+    <h1>Welcome To</h1>
+    <h1><span class="name-highlight">Nashimul</span> Website</h1>
+    <h3>World class professional web devloper</h3>
+    <p> A full stack allaround designer that placreate<p>
+        
+    </p> in massa consectetur</p>
     
 </body>
 </html>
